# cheatess

./: .env  .gitattributes  .gitignore  Cargo.toml  LICENSE  Pipfile  README.md  main.py  mypy.ini  pyproject.toml  setup.cfg  test.py
.github/workflows/: ci.yml  deploy.yml
app/: eslint.config.js  package.json  svelte.config.js
app/src/: Socket.svelte  app.html
app/src/components/: Board.svelte  Controls.svelte  Logs.svelte  MovesInfo.svelte
app/src/routes/: +page.svelte
app/src/views/: Configuration.svelte  Game.svelte  Settings.svelte
backend/: Cargo.toml
backend/src/: main.rs
core/: .gitignore  Cargo.toml  README.md
core/docker/: Dockerfile.base
core/src/: config.rs  engine.rs  game.rs  image.rs  img_proc.rs  lib.rs  logger.rs  main.rs  monitor.rs  myimage.rs  old.rs  parser.rs  printer.rs  procimg.rs  stockfish.rs  utils.rs
core/src/config/: game.rs  mod.rs  stockfish.rs
core/src/utils/: context.rs  file_system.rs  mod.rs  printer.rs  screen_region.rs
core/src/webwrapper/: chesscom.rs  lichess.rs  mod.rs
docker/: Dockerfile.prod  Dockerfile.test
pieces/: info.txt
scripts/: start_core.sh
src/: .cache.json  app.py  engine.rs  lib.rs  log.py  main.rs  model.py  monitor.rs  sync_main.rs
src/app/: application.py
src/cnn/: model.py  train.py
src/components/: buttons.py  logbox.py  modals.py  movebox.py  sidebar.py  tabview.py  views.py
src/core/: async_stockfish.rs  engine.rs  mod.rs  procimg.rs  stockfish.rs
src/stockfish/: async_api.rs  mod.rs  sync_api.rs
src/utils/: board.py  cache_loader.py  context.py  engine.py  error.rs  image_modifier.py  logger.rs  mod.rs  monitor.rs  parser.rs  path_manager.py  printer.rs  snippet_machine.py  thread.py  types.py
