[package]
name = "cheatess-core"
authors = ["Dawid Sieluzycki @leghart"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Leghart/cheatess-core"
license = "MIT"
exclude = ["/templates"]
include = ["/src"]

[dependencies]
clap = { version = "4.5.41", default-features = false, features = ["std", "help"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features=["log"]}
image = { version = "0.25", default-features = false }
log = { version = "0.4.27", default-features = false }
opencv = { version = "0.94.2", default-features = false, features = ["clang-runtime", "imgproc", "highgui"] }
subprocess = { version = "0.2.9", default-features = false }
text-colorizer = { version = "1.0.0", default-features = false }
xcap = { version = "0.6.1", default-features = false }
tokio = { version = "1.47.1", features = ["full"] }
async-trait = { version = "0.1" }

[dev-dependencies]
rstest = "0.24.0"
opencv = { version = "0.94.2", default-features = false, features = ["imgcodecs"] }
clippy = "0.0.302"

[profile.dev]
codegen-units = 256
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
