[package]
name = "cheatess-core"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.9"
opencv = { version = "0.94.2", features = ["clang-runtime"] }
rdev = "0.5.3"
screenshots = "0.8.10"
serde = {version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
subprocess = "0.2.9"
device_query = "3.0.0"

[dev-dependencies]
clippy = "0.0.302"
rstest = "0.24.0"
